styles/wallet.module.css
.walletGrid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  grid-gap: 20px;
  justify-items: center;
  align-items: center;
}

.walletFilters {
  margin-top: 3rem;
  margin-left: 0.2rem;
  margin-bottom: 0.5rem;
}

.drag {
  opacity: 33%;
}

.drop {
  box-shadow: 0 0 10px var(--bs-info);
}

.card {
  width: 160px;
  height: 180px;
}

.indicators {
  position: absolute;
  width: 100%;
  display: grid;
  align-items: center;
  justify-content: end;
  padding: 10px 10px 0 10px;
  grid-gap: 0.2rem;
  grid-auto-flow: column;
}

.badge {
  color: var(--theme-grey) !important;
  background: var(--theme-clickToContextColor) !important;
  vertical-align: middle;
  margin-bottom: 0.1rem;
  margin-top: 0.1rem;
  margin-right: 0.2rem;
}

.receive {
  color: #20c997 !important;
}

.send {
  color: var(--bs-primary) !important;
}

.attach {
  color: var(--bs-body-color) !important;
  text-align: center;
}

.attach svg {
  fill: var(--bs-body-color) !important;
  margin-left: 0.5rem;
}

.indicator {
  width: 14px;
  height: 14px;
}

.indicator.success {
  color: var(--bs-green) !important;
  background-color: var(--bs-green) !important;
  border: 1px solid var(--bs-success);
}

.indicator.error {
  color: var(--bs-red) !important;
  background-color: var(--bs-red) !important;
  border: 1px solid var(--bs-danger);
}

.indicator.warning {
  color: var(--bs-orange) !important;
  background-color: var(--bs-orange) !important;
  border: 1px solid var(--bs-secondary);
}

.indicator.disabled {
  color: var(--theme-toolbarHover) !important;
  background-color: var(--theme-toolbarHover) !important;
  border: 1px solid var(--theme-toolbarActive);
}

